--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,26 @@
 </head>
 
 <body>
+    <div class="menu">
+        <a href="">
+            <h1>MAIN</h1>
+        </a>
+        <a href="">
+            <h2>PROJECTS</h2>
+        </a>
+        <a href="">
+            <h2></h2>
+        </a>
+        <a href="">
+            <h2></h2>
+        </a>
+    </div>
+
+
+
+    <form action="" method="POST">
+
+    </form>
 
     <script src="CardsDeck"></script>
 </body>
