publicity div add

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div class="publicity"></div>
+    <div class="publicity"></div>
+
     <div class="menu">
         <a href="">
             <h1>MAIN</h1>
