index.html modify

--- a/src/index.html
+++ b/src/index.html
@@ -11,23 +11,34 @@
 <body>
     <div class="publicity"></div>
     <div class="publicity"></div>
+    <header>
 
-    <div class="menu">
-        <a href="">
-            <h1>MAIN</h1>
-        </a>
-        <a href="">
-            <h2>PROJECTS</h2>
-        </a>
-        <a href="">
-            <h2></h2>
-        </a>
-        <a href="">
-            <h2></h2>
-        </a>
-    </div>
+        <div class="menu">
+            <a href="">
+                <h1>MAIN</h1>
+            </a>
+            <a href="">
+                <h2>PROJECTS</h2>
+            </a>
+            <a href="">
+                <h2></h2>
+            </a>
+            <a href="">
+                <h2></h2>
+            </a>
+        </div>
+
+    </header>
+
+    <main>
 
 
+    </main>
+
+    <footer>
+
+
+    </footer>
 
     <form action="" method="POST">
 
