--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CardsVSHumans</title>
-    
+
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 <h2></h2>
             </a>
         </div>
-
+        <script src="../index.js"></script>
     </header>
 
     <main>
